fixed shifting buttons onhover
They were being given a border when hovered, but didn't have one before hand. So it all shifted to accommodate the extra pace for the border. Now they have the border there, but just transparent when not in use

--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ a {
     display: inline-block;
     padding: 5px;
     border-radius: 5px;
+    border: 0.05em solid transparent;
 
     /*
     background-color: #39ff14;
